syntax = "proto3";

package user;

option go_package = "github.com/Portfolio-Advanced-software/BingeBuster-UserService/userpb";


service UserService {
    rpc CreateUser(CreateUserReq) returns (CreateUserRes);
    rpc ReadUser(ReadUserReq) returns (ReadUserRes);
    rpc UpdateUser(UpdateUserReq) returns (UpdateUserRes);
    rpc DeleteUser(DeleteUserReq) returns (DeleteUserRes);
    rpc ListUsers(ListUserReq) returns (stream ListUserRes);
}


message User {
    string id = 1;
    string watchedmovies = 2;
}


message CreateUserReq {
    User user = 1; // User id blank
}
message CreateUserRes {
    User user = 1; // User id filled in
}

message UpdateUserReq {
    User user = 1;
}
message UpdateUserRes {
    User user = 1;
}

message ReadUserReq {
    string id = 1;
}
message ReadUserRes {
    User user = 1;
}

message DeleteUserReq {
    string id = 1;
}
message DeleteUserRes {
    bool success = 1;
}

message ListUserReq {}

message ListUserRes {
    User user = 1;
}